--- a/css/_custom.css
+++ b/css/_custom.css
@@ -30,3 +30,12 @@
     border-radius: 15px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
 }
+
+.container-review-section:hover {
+    transform: scale(1.05);
+    transition: transform 0.3s ease;
+}
+
+.checked {
+    color: orange;
+}
